[#62910848] move credentials to application.yml
- no need to diferentiate production / non-production this is managed by
  config file application.yml.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -18,3 +18,8 @@
 RACK_ENV: development
 messaging_key: crm-secret
 app_key: 12341234124
+aws_access_key_id: "acsdfasf"
+aws_secret_access_key: "asdfdf"
+aws_bucket: "bucket-name"
+aws_region: "eu-west-1"
+aws_host:   "http://bucket-name.s3.amazonaws.com"
