--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -17,9 +17,11 @@
 # For setting heroku's configuration yout can use `rake figaro:heroku[app-name]`
 RACK_ENV: development
 messaging_key: crm-secret
+crm_key: 12341234124
 app_key: 12341234124
 aws_access_key_id: "acsdfasf"
 aws_secret_access_key: "asdfdf"
 aws_bucket: "bucket-name"
 aws_region: "eu-west-1"
 aws_host:   "http://bucket-name.s3.amazonaws.com"
+
