--- a/config/appsignal.yml
+++ b/config/appsignal.yml
@@ -13,7 +13,8 @@ default: &defaults
 # to false to not push metrics for that environment.
 development:
   <<: *defaults
-  active: true
+  active: false
+  slow_request_threshold: 10
 
 production:
   <<: *defaults
