--- a/config/mongoid.yml.example
+++ b/config/mongoid.yml.example
@@ -4,6 +4,7 @@ development:
 
 test:
   host: localhost
+  port: 27018
   database: contacts_test
 
 # set these environment variables on your prod server
