--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -25,3 +25,4 @@ aws_bucket: "bucket-name"
 aws_region: "eu-west-1"
 aws_host:   "http://bucket-name.s3.amazonaws.com"
 office_key: office-secret
+planning_key: secret-key
