[#90846814] add overmind key to application.yml.example

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -19,6 +19,7 @@ RACK_ENV: development
 messaging_key: secret
 crm_key: secret
 app_key: secret
+overmind_key: secret
 accounts_key: secret
 activity_key: secret
 office_key: secret
