--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -24,6 +24,7 @@ activity_key: secret
 office_key: secret
 planning_key: secret
 fnz_key: secret
+mailing_key: secret
 readonly_key: secret
 aws_access_key_id: "acsdfasf"
 aws_secret_access_key: "asdfdf"
