--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -23,6 +23,7 @@ accounts_key: secret
 activity_key: secret
 office_key: secret
 planning_key: secret
+attendance_key: secret
 fnz_key: secret
 mailing_key: secret
 readonly_key: secret
